--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "stiko/hipchat-laravel",
+    "version": "0.1",
     "type": "library",
     "keywords": ["hipchat","laravel"],
     "homepage": "https://github.com/STIKO/hipchat-laravel/tree/master",
